RESOLVED FIXED288558
[WGSL] Nested array types are not packed correctly
https://bugs.webkit.org/show_bug.cgi?id=288558
Summary [WGSL] Nested array types are not packed correctly
Mike Wyrzykowski
Reported 2025-02-25 18:11:21 PST
[WebGPU] Structure size is incorrect for structs containing vec<T, 3> types
Attachments
Mike Wyrzykowski
Comment 1 2025-02-25 18:26:42 PST
Mike Wyrzykowski
Comment 2 2025-02-25 18:28:23 PST
Tadeu Zagallo
Comment 3 2025-02-26 07:40:50 PST
EWS
Comment 4 2025-02-26 13:20:12 PST
Committed 291162@main (54d96e21534d): <https://commits.webkit.org/291162@main> Reviewed commits have been landed. Closing PR #41407 and removing active labels.
Mike Wyrzykowski
Comment 5 2025-02-27 12:34:48 PST
Reopened Bugzilla. This regressed threejs comptue birds sample, tracking revert in https://bugs.webkit.org/show_bug.cgi?id=288736.
Tadeu Zagallo
Comment 6 2025-03-04 06:47:45 PST
EWS
Comment 7 2025-03-07 11:28:07 PST
Committed 291791@main (24dad92a3283): <https://commits.webkit.org/291791@main> Reviewed commits have been landed. Closing PR #41845 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.