[WebGPU] Structure size is incorrect for structs containing vec<T, 3> types https://bugs.webkit.org/show_bug.cgi?id=288558 rdar://145584310

Reviewed by NOBODY (OOPS!).

typeSize should be rounded to the field alignment, otherwise the following struct:

struct type0 {
    vec<unsigned, 3> field0;
    unsigned field1;
};

will have its size computed as 16 instead of 20. Note, vec<T, 3> has the same
alignment as vec<T, 4> because these are the same size in Metal shading language.

* LayoutTests/fast/webgpu/nocrash/fuzz-288558-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-288558.html: Added.
Add regression test.

* Source/WebGPU/WGSL/AttributeValidator.cpp:
(WGSL::AttributeValidator::visit):